feat: implement user card

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,10 +29,5 @@
     /* Completeness */
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*",
-    "./gatsby-node.ts",
-    "./gatsby-config.ts",
-    "./plugins/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
